# Core

./: .gitignore  .gitmodules  LICENSE.md  README.md  imgui.ini  meson.build  mingw_cross.txt  mingw_settings.txt  test
build-mingw/: .ninja_deps  compile_commands.json
build-mingw/meson-info/: intro-targets.json  meson-info.json
build-mingw/meson-logs/: meson-log.txt
build-mingw/meson-private/: cmd_line.txt  coredata.dat.prev
data/shaders/: circle.frag  sprite.frag
linux-build/: build.ninja  compile_commands.json
linux-build-mingw/: .ninja_log  build.ninja
linux-build-mingw/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-install_plan.json  intro-installed.json  intro-projectinfo.json
linux-build-mingw/meson-logs/: meson-log.txt
linux-build-mingw/meson-private/: coredata.dat.prev
linux-build-mingw/subprojects/glfw3/src/: glfw_config.h
linux-build/meson-info/: intro-buildoptions.json  intro-projectinfo.json  intro-targets.json
linux-build/meson-logs/: meson-log.txt
linux-build/meson-private/: coredata.dat.prev
linux-build/meson-private/__CMake_compiler_info__/: CMakeCache.txt  build.ninja  cmake_trace.txt
linux-build/meson-private/cmake_glfw/: cmake_trace.txt
linux-build/meson-private/cmake_imgui/: CMakeLists.txt
linux-build/meson-private/cmake_stb-meson/: cmake_install.cmake  cmake_trace.txt
linux-build/src/core/libcore-framework.so.p/: libcore-framework.so.symbols
linux-build/src/example/: Example
linux-build/subprojects/glfw/src/: glfw_config.h  libglfw.so.3
linux-build/subprojects/imgui-1.87/libimgui.so.p/: libimgui.so.symbols
src/: meson.build
src/core/: core.h  meson.build
src/core/gl/: gl_wrapper.cpp  gl_wrapper.h  meson.build
src/core/graphics/: graphics.h  image.cpp  image.h  meson.build  shape.cpp  shape.h  sprite.cpp  sprite.h  stb.cpp  texture.cpp  texture.h  view.cpp  view.h  window.cpp  window.h
src/core/system/: core_utils.h  data.cpp  data.h  events.cpp  events.h  meson.build  object.cpp  object.h  quadtree.todo  quadtree.todoh  random_machine.cpp  random_machine.h  range.h  scene.cpp  scene.h  singleton.cpp  singleton.h  system.h  system_fwd.h  transform.cpp  transform.h
src/example/: example_geometry_scene.h  example_scene.h  example_sprite_scene.h  gameObject.cpp  gameObject.h  main.cpp  meson.build  test_scene.h
subprojects/: gleq.wrap  glew.wrap  glfw.wrap  glfw3.wrap  imgui.wrap  stb-meson.wrap  stb.wrap
subprojects/fastnoiselite/: FastNoiseLite.h  meson.build
subprojects/micropather/: meson.build
subprojects/packagefiles/gleq_patch/: meson.build
subprojects/packagefiles/imgui_patch/: meson.build
subprojects/packagefiles/stb_patch/: meson.build
