project(
    'core-lib', 
    'cpp',
    default_options : ['cpp_std=c++20'],
    version : '0.1.0',
    license : 'MIT' 
)

# Dependencies
glfw_dep            =   dependency('glfw3')
glew_dep            =   dependency('glew')
threads_dep         =   dependency('threads')
fmt_dep             =   dependency('fmt')
gl_dep              =   dependency('opengl')
glm_dep             =   dependency('glm')
glew_dep            =   dependency('glew')
stb_dep             =   dependency('stb')
imgui_dep           =   dependency('imgui')
#micropather_dep     =   dependency('micropather')
#fastnoiselite_dep   =   dependency('fastnoiselite')
#x11_dep             =   dependency('x11')
#json_dep            =   dependency('nlohmann_json')

subdir('src')